# EX3_INCLUDING_TESTS

./: CMakeLists.txt  makefile
lib/googletest-release-1.8.0/: appveyor.yml
lib/googletest-release-1.8.0/googlemock/: LICENSE
lib/googletest-release-1.8.0/googlemock/docs/: CheatSheet.md  CookBook.md  DesignDoc.md  ForDummies.md  FrequentlyAskedQuestions.md
lib/googletest-release-1.8.0/googlemock/docs/v1_5/: CheatSheet.md  CookBook.md  ForDummies.md  FrequentlyAskedQuestions.md
lib/googletest-release-1.8.0/googlemock/docs/v1_6/: CheatSheet.md  CookBook.md  ForDummies.md  FrequentlyAskedQuestions.md
lib/googletest-release-1.8.0/googlemock/docs/v1_7/: CheatSheet.md  CookBook.md  ForDummies.md  FrequentlyAskedQuestions.md
lib/googletest-release-1.8.0/googlemock/include/gmock/: gmock-generated-actions.h.pump  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h.pump  gmock-generated-nice-strict.h.pump
lib/googletest-release-1.8.0/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h.pump
lib/googletest-release-1.8.0/googlemock/scripts/: gmock-config.in
lib/googletest-release-1.8.0/googlemock/scripts/generator/: LICENSE
lib/googletest-release-1.8.0/googletest/: CHANGES  README.md
lib/googletest-release-1.8.0/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  PumpManual.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_5_PumpManual.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md
lib/googletest-release-1.8.0/googletest/include/gtest/: gtest-param-test.h.pump
lib/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-tuple.h.pump  gtest-type-util.h.pump
lib/googletest-release-1.8.0/googletest/m4/: acx_pthread.m4
lib/googletest-release-1.8.0/googletest/scripts/: gtest-config.in
lib/googletest-release-1.8.0/googletest/test/: gtest_output_test_golden_lin.txt
lib/googletest-release-1.8.0/googletest/xcode/Samples/FrameworkSample/: runtests.sh
lib/googletest-release-1.8.0/googletest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
lib/googletest-release-1.8.0/googletest/xcode/Scripts/: runtests.sh
lib/googletest-release-1.8.0/googletest/xcode/gtest.xcodeproj/: project.pbxproj
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  IGame.cpp  IGame.h  Player.cpp  Player.h  RemoteGame.cpp  RemoteGame.h  RemotePlayer.cpp  RemotePlayer.h  StandartGameLogic.cpp  StandartGameLogic.h  TwoPlayersOneComputerGame.cpp  TwoPlayersOneComputerGame.h  main.cpp
src/client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Client.cpp  Client.h  ConsolePrinter.cpp  ConsolePrinter.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  IGame.cpp  IGame.h  Player.cpp  Player.h  Printer.cpp  Printer.h  RemoteGame.cpp  RemoteGame.h  RemotePlayer.cpp  RemotePlayer.h  StandartGameLogic.cpp  TwoPlayersOneComputerGame.cpp  TwoPlayersOneComputerGame.h  client_main.cpp  mainClient.cpp
src/server/: CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CommandsManager.cpp  CommandsManager.h  HandleClients.cpp  HandleClients.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Room.cpp  Room.h  RoomsCollection.cpp  RoomsCollection.h  Server.cpp  Server.h  ServerOperations.cpp  ServerOperations.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  server_main.cpp
test/: AIPlayerTest.cpp  AIPlayerTest.h  BoardsMatch.h  ClientTest.cpp  ClientTest.h  HandleClientsTest.cpp  HandleClientsTest.h  JustATest.cpp  MatrixAssertion.h  RoomTest.cpp  RoomTest.h  RoomsCollectionTest.cpp  RoomsCollectionTest.h  StandardGameLogicTest.cpp  StandardGameLogicTest.h  gtest_main.cpp
